<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_bp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambahDokter"
            android:textSize="@dimen/textSizeBuatPertemuan"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            ></TextView>
        <TextView
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/tvNamaP"
            android:layout_height="wrap_content"
            android:text="@string/namaD">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nama_pasien"
            android:layout_marginBottom="10dp"
            android:hint="">
        </EditText>

        <TextView
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/tvWaktu"
            android:layout_height="wrap_content"
            android:text="@string/spesialis">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/waktu">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:id="@+id/btn_makeappointment"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="match_parent"
            android:text="@string/tambahDokter"
            android:layout_marginBottom="@dimen/btnMargin"
            android:gravity="center"
            android:backgroundTint="@color/gray"
            ></Button></LinearLayout>
</RelativeLayout>